[project]
name = "bacoton"
version = "0.1.0"
description = "Backend logic and generator for puzzle app"
authors = [{ name = "제레미", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "httpx",                 # 외부 API 호출용
    "numpy",                 # 퍼즐 데이터 계산용
    "jinja2",                # 템플릿 렌더링 (옵션)
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "mypy",
    "ipython"
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "B"]
ignore = ["E501"]  # line too long

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
